<resources>
    <string name="app_name">Zootopia</string>
    <string name="sign_up">Sign Up</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="edit_address">Edit Address</string>
    <string name="region">Region</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="barangay">Barangay</string>
    <string name="postal_code">Postal Code</string>
    <string name="street">Street/Building/House No.</string>
    <string name="save_address">Save Address</string>
    <string name="back">Back</string>
    <string name="order_date">Order Date:</string>
    <string name="payment_method">Payment Method:</string>
    <string name="payment_status">Payment Status:</string>
    <string name="order_status">Order Status:</string>
    <string name="items_ordered">Items Ordered</string>
    <string name="order_details">Order Details</string>
    <string name="back_to_home">Back to Home</string>
    <string name="view_my_orders">View My Orders</string>
    <string name="order_confirmed">Order Confirmed</string>
</resources>